# BBK_digital

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
apps/contact/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/contact/migrations/: 0001_initial.py
apps/contact/tests/: test_admin.py  test_models.py  test_urls.py  test_views.py
apps/core/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/core/tests/: test_urls.py  test_views.py
apps/portfolio/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/portfolio/migrations/: 0001_initial.py
apps/portfolio/tests/: test_admin.py  test_models.py  test_urls.py  test_views.py
apps/products/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py
apps/products/tests/: test_admin.py  test_models.py  test_urls.py  test_views.py
apps/services/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
docs/: architecture.md
requirements/: base.txt  development.txt
static/css/: main.css
static/js/: main.js  navbar.js
templates/: base.html
templates/contact/: contact.html
templates/core/: about.html  home.html  legal_notice.html  privacy_policy.html
templates/errors/: 404.html  500.html
templates/includes/: footer.html  messages.html  navbar.html  seo_meta.html  social_links.html
templates/portfolio/: project_list.html
templates/products/: product_list.html
templates/services/: service_list.html
(+9 files in other folders)
