[project]
name = "bbk-digital"
version = "0.1.0"
description = "BBK Digital — studio de conception de solutions numériques"
requires-python = ">=3.11"

[tool.black]
line-length = 99
target-version = ["py311"]
extend-exclude = "migrations"

[tool.isort]
profile = "black"
line_length = 99
skip_glob = ["**/migrations/*"]
known_first_party = ["apps", "config"]

[tool.ruff]
line-length = 99
target-version = "py311"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "DJ"]
